* Thu Mar 07 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Allow users to purge unmanaged xinetd services
- Add support for Puppet 6

* Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 4.1.1-0
- Fixed bug in which the xinetd::disabled parameter would only
  be included in xinetd.conf if the xinetd::no_access parameter
  was not empty.
- Use Simplib::Umask data type in lieu of validate_umask(),
  a deprecated simplib Puppet 3 function.
- Use simplib::validate_net_list() in lieu of validate_net_list(),
  a deprecated simplib Puppet 3 function.
- Use simplib::nets2cidr() in lieu of nets2cidr(),
  a deprecated simplib Puppet 3 function.
- Expanded the upper limits of the stdlib Puppet module version

* Fri Aug 24 2018 Nick Miller <nick.miller@onyxpoint.com> - 4.1.0-0
- Add support for Puppet 5 and OEL
- Added $package_ensure parameter
  - Changed the package from 'latest' to 'installed'
  - It will also respect `simp_options::package_ensure`

* Fri Jun 16 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 4.0.2-0
- Update to Puppet 4 custom functions
- Update puppet requirement and remove OBE pe requirement in metadata.json

* Tue Jan 24 2017 Nick Miller <nick.miller@onyxpoint.com> - 4.0.1-0
- Updated data types to use new Simplib types
- Corrected simp_options lookups to not have a context prefix of '::'

* Wed Dec 07 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 4.0.0-0
- Use simp_options module for global catalysts
- Fix bug in xinetd.service.erb that caused an inadvertant newline between the
  IP address and port in a redirect configuration line in the generated file.
- Fix bug in xinetd.service.erb in which the instances and mdns configuration
  lines were omitted from the generated file.
- Fixed bug in xinetd.service.erb in which includedir and include were specified
  within a service declaration and formatted incorrectly.
- Fixed bug in validation of syslog facility
- Fixed bugs in validation of ::xinetd $passenv and $disable parameters