@@ -1,0 +1,53 @@
+---
+version: 2.0.0
+checks:
+  oval:com.puppet.forge.simp.xinetd.banner:
+    settings:
+      parameter: xinetd::banner
+      value: "/etc/issue.net"
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:AC-8: true
+      disa_stig: true
+      RHEL-07-010030: true
+      SRG-OS-000023-GPOS-00006: true
+      SRG-OS-000024-GPOS-00007: true
+      cci:CCI-000048: true
+    identifiers:
+      nist_800_53:rev4:
+      - AC-8
+      disa_stig:
+      - RHEL-07-010030
+      - SRG-OS-000023-GPOS-00006
+      - SRG-OS-000024-GPOS-00007
+      - CCI-000048
+  oval:com.puppet.forge.simp.xinetd.log_type:
+    settings:
+      parameter: xinetd::log_type
+      value: SYSLOG authpriv
+    type: puppet-class-parameter
+    controls:
+      nist_800_53:rev4: true
+      nist_800_53:rev4:AU-3:2: true
+      nist_800_53:rev4:AU-4:1: true
+      nist_800_53:rev4:AU-9: true
+      disa_stig: true
+      RHEL-07-030310: true
+      RHEL-07-030620: true
+      SRG-OS-000327-GPOS-00127: true
+      SRG-OS-000471-GPOS-00215: true
+      cci:CCI-002234: true
+      cci:CCI-000172: true
+    identifiers:
+      nist_800_53:rev4:
+      - AU-3:2
+      - AU-4:1
+      - AU-9
+      disa_stig:
+      - RHEL-07-030310
+      - RHEL-07-030620
+      - SRG-OS-000327-GPOS-00127
+      - SRG-OS-000471-GPOS-00215
+      - CCI-002234
+      - CCI-000172
