@@ -1,3 +1,7 @@
+* Mon Jun 03 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 4.2.0-0
+- Add v2 compliance_markup data
+- Add compliance engine unit tests
+
 * Thu Mar 07 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
 - Allow users to purge unmanaged xinetd services
 - Add support for Puppet 6
